[project]
name = "onemap"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre K",email = "andre.kamarudin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "onemap" }
]
