[project]
name = "onemap"
version = "0.1.0"
description = ""
authors = [{ name = "Andre K", email = "andre.kamarudin@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[tool.hatch.build.targets.sdist]
include = ["onemap"]

[tool.hatch.build.targets.wheel]
include = ["onemap"]

